--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,12 +32,20 @@ jobs:
           cache-dependency-path: scripts/zkevm-config-diff/go.sum
 
       # Install tools.
-      - name: Install kurtosis
+      - name: Install kurtosis (ubuntu)
+        if: contains(matrix.os, 'ubuntu')
         run: |
           echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
           sudo apt update
           sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-          kurtosis analytics disable
+
+      - name: Install kurtosis (macOS)
+        if: contains(matrix.os, 'macos')
+        run: |
+          brew install kurtosis-tech/tap/kurtosis-cli=${{ env.KURTOSIS_VERSION }}
+
+      - name: Disable kurtosis analytics
+        run: kurtosis analytics disable
 
       - name: Install yq
         run: pip3 install yq
@@ -85,12 +93,20 @@ jobs:
       - uses: actions/checkout@v4
 
       # Install tools.
-      - name: Install kurtosis
+      - name: Install kurtosis (ubuntu)
+        if: contains(matrix.os, 'ubuntu')
         run: |
           echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
           sudo apt update
           sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-          kurtosis analytics disable
+
+      - name: Install kurtosis (macOS)
+        if: contains(matrix.os, 'macos')
+        run: |
+          brew install kurtosis-tech/tap/kurtosis-cli=${{ env.KURTOSIS_VERSION }}
+
+      - name: Disable kurtosis analytics
+        run: kurtosis analytics disable
 
       - name: Install yq
         run: pip3 install yq
@@ -178,12 +194,20 @@ jobs:
       - uses: actions/checkout@v4
 
       # Install tools.
-      - name: Install kurtosis
+      - name: Install kurtosis (ubuntu)
+        if: contains(matrix.os, 'ubuntu')
         run: |
           echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
           sudo apt update
           sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-          kurtosis analytics disable
+
+      - name: Install kurtosis (macOS)
+        if: contains(matrix.os, 'macos')
+        run: |
+          brew install kurtosis-tech/tap/kurtosis-cli=${{ env.KURTOSIS_VERSION }}
+
+      - name: Disable kurtosis analytics
+        run: kurtosis analytics disable
 
       - name: Install foundry
         uses: foundry-rs/foundry-toolchain@v1
@@ -207,12 +231,20 @@ jobs:
       - uses: actions/checkout@v4
 
       # Install tools.
-      - name: Install kurtosis
+      - name: Install kurtosis (ubuntu)
+        if: contains(matrix.os, 'ubuntu')
         run: |
           echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
           sudo apt update
           sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-          kurtosis analytics disable
+
+      - name: Install kurtosis (macOS)
+        if: contains(matrix.os, 'macos')
+        run: |
+          brew install kurtosis-tech/tap/kurtosis-cli=${{ env.KURTOSIS_VERSION }}
+
+      - name: Disable kurtosis analytics
+        run: kurtosis analytics disable
 
       - name: Install yq
         run: pip3 install yq
