ci: install colima

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,12 +65,15 @@ jobs:
       - name: Setup docker (macOS)
         if: contains(matrix.os, 'macos')
         run: |
-          brew install docker
+          brew install docker colima
           colima start
-          
+
           # For testcontainers to find the Colima socket
           # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
           sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
+
+          # Test the setup
+          docker run hello-world
 
       # Deploy components.
       - name: Enable gas token feature
@@ -145,12 +148,15 @@ jobs:
       - name: Setup docker (macOS)
         if: contains(matrix.os, 'macos')
         run: |
-          brew install docker
+          brew install docker colima
           colima start
-          
+
           # For testcontainers to find the Colima socket
           # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
           sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
+
+          # Test the setup
+          docker run hello-world
 
       # Deploy components.
       - name: Disable all deployment steps
@@ -254,12 +260,15 @@ jobs:
       - name: Setup docker (macOS)
         if: contains(matrix.os, 'macos')
         run: |
-          brew install docker
+          brew install docker colima
           colima start
-          
+
           # For testcontainers to find the Colima socket
           # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
           sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
+
+          # Test the setup
+          docker run hello-world
 
       # Deploy components.
       - name: Deploy Kurtosis CDK package
@@ -313,12 +322,15 @@ jobs:
       - name: Setup docker (macOS)
         if: contains(matrix.os, 'macos')
         run: |
-          brew install docker
+          brew install docker colima
           colima start
-          
+
           # For testcontainers to find the Colima socket
           # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
           sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
+
+          # Test the setup
+          docker run hello-world
 
       # Deploy components.
       - name: Deploy L1 and zkEVM contracts
