--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,7 +112,13 @@ jobs:
   incremental:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os:
+          - ubuntu-latest
+          # Colima cannot be started on M1 chips unfortunately because they do not support nested
+          # virtualization (running a VM inside a VM). This is why we use macos-12 instead of macos-latest.
+          # https://github.com/abiosoft/colima/issues/970
+          - macos-12
+          - windows-latest
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
@@ -233,7 +239,13 @@ jobs:
   configless:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os:
+          - ubuntu-latest
+          # Colima cannot be started on M1 chips unfortunately because they do not support nested
+          # virtualization (running a VM inside a VM). This is why we use macos-12 instead of macos-latest.
+          # https://github.com/abiosoft/colima/issues/970
+          - macos-12
+          - windows-latest
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
@@ -282,7 +294,13 @@ jobs:
   pre-deployed-contracts:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os:
+          - ubuntu-latest
+          # Colima cannot be started on M1 chips unfortunately because they do not support nested
+          # virtualization (running a VM inside a VM). This is why we use macos-12 instead of macos-latest.
+          # https://github.com/abiosoft/colima/issues/970
+          - macos-12
+          - windows-latest
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
