--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,46 +38,12 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
           cache-dependency-path: scripts/zkevm-config-diff/go.sum
 
-      # Install tools.
-      - name: Install kurtosis (ubuntu)
-        if: contains(matrix.os, 'ubuntu')
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-
-      - name: Install kurtosis (macOS)
-        if: contains(matrix.os, 'macos')
-        run: |
-          brew install kurtosis-tech/tap/kurtosis-cli@${{ env.KURTOSIS_VERSION }}
-
-      - name: Disable kurtosis analytics
-        run: kurtosis analytics disable
-
-      - name: Install yq (ubuntu)
-        if: contains(matrix.os, 'ubuntu')
-        run: pip3 install yq
-
-      - name: Install yq (macos)
-        if: contains(matrix.os, 'macos')
-        run: |
-          python3 -m venv ${{ github.workspace }}
-          source ${{ github.workspace }}/bin/activate
-          python3 -m pip install yq
-
-      - name: Install foundry
-        uses: foundry-rs/foundry-toolchain@v1
-
-      - name: Setup docker (macOS)
-        if: contains(matrix.os, 'macos')
-        run: |
-          brew install --cask docker
-          colima start
-          # For testcontainers to find the Colima socket
-          # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
-          sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
-          # Test the setup
-          docker run hello-world
+      # Set up environment.
+      - name: Set up environment
+        uses: ./.github/workflows/install-kurtosis.yml
+        with:
+          runner_os: ${{ matrix.os }}
+          kurtosis_version: ${{ env.KURTOSIS_VERSION }}
 
       # Deploy components.
       - name: Enable gas token feature
@@ -125,46 +91,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Install tools.
-      - name: Install kurtosis (ubuntu)
-        if: contains(matrix.os, 'ubuntu')
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-
-      - name: Install kurtosis (macOS)
-        if: contains(matrix.os, 'macos')
-        run: |
-          brew install kurtosis-tech/tap/kurtosis-cli@${{ env.KURTOSIS_VERSION }}
-
-      - name: Disable kurtosis analytics
-        run: kurtosis analytics disable
-
-      - name: Install yq (ubuntu)
-        if: contains(matrix.os, 'ubuntu')
-        run: pip3 install yq
-
-      - name: Install yq (macos)
-        if: contains(matrix.os, 'macos')
-        run: |
-          python3 -m venv ${{ github.workspace }}
-          source ${{ github.workspace }}/bin/activate
-          python3 -m pip install yq
-
-      - name: Install foundry
-        uses: foundry-rs/foundry-toolchain@v1
-
-      - name: Setup docker (macOS)
-        if: contains(matrix.os, 'macos')
-        run: |
-          brew install --cask docker
-          colima start
-          # For testcontainers to find the Colima socket
-          # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
-          sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
-          # Test the setup
-          docker run hello-world
+      # Set up environment.
+      - name: Set up environment
+        uses: ./.github/workflows/install-kurtosis.yml
+        with:
+          runner_os: ${{ matrix.os }}
+          kurtosis_version: ${{ env.KURTOSIS_VERSION }}
 
       # Deploy components.
       - name: Disable all deployment steps
@@ -252,35 +184,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Install tools.
-      - name: Install kurtosis (ubuntu)
-        if: contains(matrix.os, 'ubuntu')
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-
-      - name: Install kurtosis (macOS)
-        if: contains(matrix.os, 'macos')
-        run: |
-          brew install kurtosis-tech/tap/kurtosis-cli@${{ env.KURTOSIS_VERSION }}
-
-      - name: Disable kurtosis analytics
-        run: kurtosis analytics disable
-
-      - name: Install foundry
-        uses: foundry-rs/foundry-toolchain@v1
-
-      - name: Setup docker (macOS)
-        if: contains(matrix.os, 'macos')
-        run: |
-          brew install --cask docker
-          colima start
-          # For testcontainers to find the Colima socket
-          # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
-          sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
-          # Test the setup
-          docker run hello-world
+      # Set up environment.
+      - name: Set up environment
+        uses: ./.github/workflows/install-kurtosis.yml
+        with:
+          runner_os: ${{ matrix.os }}
+          kurtosis_version: ${{ env.KURTOSIS_VERSION }}
 
       # Deploy components.
       - name: Deploy Kurtosis CDK package
@@ -307,49 +216,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Install tools.
-      - name: Install kurtosis (ubuntu)
-        if: contains(matrix.os, 'ubuntu')
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-
-      - name: Install kurtosis (macOS)
-        if: contains(matrix.os, 'macos')
-        run: |
-          brew install kurtosis-tech/tap/kurtosis-cli@${{ env.KURTOSIS_VERSION }}
-
-      - name: Disable kurtosis analytics
-        run: kurtosis analytics disable
-
-      - name: Install yq (ubuntu)
-        if: contains(matrix.os, 'ubuntu')
-        run: pip3 install yq
-
-      - name: Install yq (macos)
-        if: contains(matrix.os, 'macos')
-        run: |
-          python3 -m venv ${{ github.workspace }}
-          source ${{ github.workspace }}/bin/activate
-          python3 -m pip install yq
-
-      - name: Install foundry
-        uses: foundry-rs/foundry-toolchain@v1
-
-      - name: Setup docker (macOS)
-        if: contains(matrix.os, 'macos')
-        run: |
-          brew install --cask docker
-          colima start
-          # For testcontainers to find the Colima socket
-          # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
-          sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
-          # Test the setup
-          docker run hello-world
-
-      - name: DEBUG
-        run: yq --version
+      # Set up environment.
+      - name: Set up environment
+        uses: ./.github/workflows/install-kurtosis.yml
+        with:
+          runner_os: ${{ matrix.os }}
+          kurtosis_version: ${{ env.KURTOSIS_VERSION }}
 
       # Deploy components.
       - name: Deploy L1 and zkEVM contracts
