--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,8 +39,7 @@ jobs:
           cache-dependency-path: scripts/zkevm-config-diff/go.sum
 
       # Set up environment.
-      - name: Set up environment
-        uses: ./.github/workflows/install-kurtosis.yml
+      - uses: ./.github/workflows/setup.yml
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -52,9 +51,11 @@ jobs:
       - name: Deploy Kurtosis CDK package
         run: kurtosis run --enclave cdk-v1 --args-file params.yml --image-download always .
 
-      - name: Check that batches are being verified
-        working-directory: ./scripts
-        run: ./batch_verification_monitor.sh ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }} ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
+      # Monitor verified batches
+      - uses: ./.github/workflows/monitor-verified-batches.yml
+        with:
+          batch_target: ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }}
+          timeout: ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
 
       # Compare configs.
       - name: Dump configs
@@ -92,8 +93,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Set up environment.
-      - name: Set up environment
-        uses: ./.github/workflows/install-kurtosis.yml
+      - uses: ./.github/workflows/setup.yml
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -162,9 +162,11 @@ jobs:
           kurtosis run --enclave cdk-v1 --args-file params.yml .
           yq -Y --in-place '.apply_workload = false' params.yml # reset
 
-      - name: Check that batches are being verified
-        working-directory: ./scripts
-        run: ./batch_verification_monitor.sh ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }} ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
+      # Monitor verified batches
+      - uses: ./.github/workflows/monitor-verified-batches.yml
+        with:
+          batch_target: ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }}
+          timeout: ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
 
 
   # Deploy the CDK environment without specifying any parameter file.
@@ -185,8 +187,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Set up environment.
-      - name: Set up environment
-        uses: ./.github/workflows/install-kurtosis.yml
+      - uses: ./.github/workflows/setup.yml
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -195,9 +196,11 @@ jobs:
       - name: Deploy Kurtosis CDK package
         run: kurtosis run --enclave cdk-v1 --image-download always .
 
-      - name: Check that batches are being verified
-        working-directory: ./scripts
-        run: ./batch_verification_monitor.sh ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }} ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
+      # Monitor verified batches
+      - uses: ./.github/workflows/monitor-verified-batches.yml
+        with:
+          batch_target: ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }}
+          timeout: ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
 
   # Deploy the CDK environment against a local l1 chain with pre-deployed zkevm contracts.
   pre-deployed-contracts:
@@ -217,8 +220,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Set up environment.
-      - name: Set up environment
-        uses: ./.github/workflows/install-kurtosis.yml
+      - uses: ./.github/workflows/setup.yml
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -255,3 +257,9 @@ jobs:
           yq -Y --in-place '(.deploy_l1 = false) | (.deploy_zkevm_contracts_on_l1 = false)' params.yml
 
           kurtosis run --enclave cdk-v1 --args-file params.yml --image-download always .
+
+      # Monitor verified batches
+      - uses: ./.github/workflows/monitor-verified-batches.yml
+        with:
+          batch_target: ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }}
+          timeout: ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
