--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           cache-dependency-path: scripts/zkevm-config-diff/go.sum
 
       # Set up environment.
-      - uses: ./.github/workflows/setup.yml
+      - uses: ./.github/actions/setup
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -52,7 +52,7 @@ jobs:
         run: kurtosis run --enclave cdk-v1 --args-file params.yml --image-download always .
 
       # Monitor verified batches
-      - uses: ./.github/workflows/monitor-verified-batches.yml
+      - uses: ./.github/actions/monitor-verified-batches
         with:
           batch_target: ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }}
           timeout: ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
@@ -93,7 +93,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Set up environment.
-      - uses: ./.github/workflows/setup.yml
+      - uses: ./.github/actions/setup
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -163,7 +163,7 @@ jobs:
           yq -Y --in-place '.apply_workload = false' params.yml # reset
 
       # Monitor verified batches
-      - uses: ./.github/workflows/monitor-verified-batches.yml
+      - uses: ./.github/actions/monitor-verified-batches
         with:
           batch_target: ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }}
           timeout: ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
@@ -187,7 +187,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Set up environment.
-      - uses: ./.github/workflows/setup.yml
+      - uses: ./.github/actions/setup
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -197,7 +197,7 @@ jobs:
         run: kurtosis run --enclave cdk-v1 --image-download always .
 
       # Monitor verified batches
-      - uses: ./.github/workflows/monitor-verified-batches.yml
+      - uses: ./.github/actions/monitor-verified-batches
         with:
           batch_target: ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }}
           timeout: ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
@@ -220,7 +220,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Set up environment.
-      - uses: ./.github/workflows/setup.yml
+      - uses: ./.github/actions/setup
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -259,7 +259,7 @@ jobs:
           kurtosis run --enclave cdk-v1 --args-file params.yml --image-download always .
 
       # Monitor verified batches
-      - uses: ./.github/workflows/monitor-verified-batches.yml
+      - uses: ./.github/actions/monitor-verified-batches
         with:
           batch_target: ${{ env.BATCH_VERIFICATION_MONITOR_TARGET }}
           timeout: ${{ env.BATCH_VERIFICATION_MONITOR_TIMEOUT }}
