--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           cache-dependency-path: scripts/zkevm-config-diff/go.sum
 
       # Set up environment.
-      - uses: ./.github/actions/setup
+      - uses: ./.github/actions/setup-environment
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -93,7 +93,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Set up environment.
-      - uses: ./.github/actions/setup
+      - uses: ./.github/actions/setup-environment
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -187,7 +187,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Set up environment.
-      - uses: ./.github/actions/setup
+      - uses: ./.github/actions/setup-environment
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
@@ -220,7 +220,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Set up environment.
-      - uses: ./.github/actions/setup
+      - uses: ./.github/actions/setup-environment
         with:
           runner_os: ${{ matrix.os }}
           kurtosis_version: ${{ env.KURTOSIS_VERSION }}
