--- a/.github/actions/monitor-verified-batches/action.yml
+++ b/.github/actions/monitor-verified-batches/action.yml
@@ -1,18 +1,15 @@
 ---
 name: Monitor verified batches
-# Reusable workflow
 
+# Reusable workflow
 on:
   workflow_call:
-    inputs:
-      batch_target:
-        description: The minimum number of batches to be verified
-        required: true
-        type: number
-      timeout:
-        description: The script timeout (in seconds)
-        required: true
-        type: number
+
+env:
+  # The minimum number of batches to be verified
+  VERIFIED_BATCHES_TARGET: 30
+  # The script timeout (in seconds)
+  TIMEOUT: 600 # 10 minutes
 
 jobs:
   setup:
@@ -20,4 +17,4 @@ jobs:
     steps:
       - name: Check that batches are being verified
         working-directory: scripts
-        run: ./batch_verification_monitor.sh ${{ inputs.batch_target }} ${{ inputs.timeout }}
+        run: ./batch_verification_monitor.sh ${{ env.VERIFIED_BATCHES_TARGET }} ${{ env.TIMEOUT }}
