--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,6 @@ concurrency:
   group: deploy-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
-env:
-  KURTOSIS_VERSION: 0.89.3
-  GO_VERSION: 1.21
-  BATCH_VERIFICATION_MONITOR_TARGET: 30
-  BATCH_VERIFICATION_MONITOR_TIMEOUT: 600 # 10 minutes
-
 jobs:
   # Deploy the CDK environment in one step, with the gas token feature enabled.
   monolithic:
@@ -35,14 +29,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: 1.21
           cache-dependency-path: scripts/zkevm-config-diff/go.sum
 
       # Set up environment.
       - uses: ./.github/actions/setup-environment
         with:
           runner_os: ${{ matrix.os }}
-          kurtosis_version: ${{ env.KURTOSIS_VERSION }}
 
       # Deploy components.
       - name: Enable gas token feature
@@ -96,7 +89,6 @@ jobs:
       - uses: ./.github/actions/setup-environment
         with:
           runner_os: ${{ matrix.os }}
-          kurtosis_version: ${{ env.KURTOSIS_VERSION }}
 
       # Deploy components.
       - name: Disable all deployment steps
@@ -190,7 +182,6 @@ jobs:
       - uses: ./.github/actions/setup-environment
         with:
           runner_os: ${{ matrix.os }}
-          kurtosis_version: ${{ env.KURTOSIS_VERSION }}
 
       # Deploy components.
       - name: Deploy Kurtosis CDK package
@@ -223,7 +214,6 @@ jobs:
       - uses: ./.github/actions/setup-environment
         with:
           runner_os: ${{ matrix.os }}
-          kurtosis_version: ${{ env.KURTOSIS_VERSION }}
 
       # Deploy components.
       - name: Deploy L1 and zkEVM contracts
