--- a/.github/actions/monitor-verified-batches/action.yml
+++ b/.github/actions/monitor-verified-batches/action.yml
@@ -1,20 +1,21 @@
 ---
 name: Monitor verified batches
+description: Check that batches are being verified in a CDK environment
 
-# Reusable workflow
-on:
-  workflow_call:
+inputs:
+  verified_batches_target:
+    description: The minimum number of batches to be verified
+    required: false
+    default: '30'
+  timeout:
+    description: The script timeout in seconds
+    required: false
+    default: '600' # 10 minutes
 
-env:
-  # The minimum number of batches to be verified
-  VERIFIED_BATCHES_TARGET: 30
-  # The script timeout (in seconds)
-  TIMEOUT: 600 # 10 minutes
-
-jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check that batches are being verified
-        working-directory: scripts
-        run: ./batch_verification_monitor.sh ${{ env.VERIFIED_BATCHES_TARGET }} ${{ env.TIMEOUT }}
+runs:
+  using: "composite"
+  steps:
+    - name: Check that batches are being verified
+      working-directory: scripts
+      shell: bash
+      run: ./batch_verification_monitor.sh ${{ inputs.verified_batches_target }} ${{ inputs.timeout }}
