--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -20,6 +20,8 @@ runs:
       if: contains(inputs.os, 'ubuntu')
       shell: bash
       run: |
+        apt update
+        apt install sudo
         echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
         sudo apt update
         sudo apt install kurtosis-cli=${{ inputs.kurtosis_version }}
