--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       # Set up environment.
       - uses: ./.github/actions/setup
         with:
-          runner_os: ${{ matrix.os }}
+          os: ${{ matrix.os }}
 
       # Deploy components.
       - name: Enable gas token feature
@@ -88,7 +88,7 @@ jobs:
       # Set up environment.
       - uses: ./.github/actions/setup
         with:
-          runner_os: ${{ matrix.os }}
+          os: ${{ matrix.os }}
 
       # Deploy components.
       - name: Disable all deployment steps
@@ -181,7 +181,7 @@ jobs:
       # Set up environment.
       - uses: ./.github/actions/setup
         with:
-          runner_os: ${{ matrix.os }}
+          os: ${{ matrix.os }}
 
       # Deploy components.
       - name: Deploy Kurtosis CDK package
@@ -213,7 +213,7 @@ jobs:
       # Set up environment.
       - uses: ./.github/actions/setup
         with:
-          runner_os: ${{ matrix.os }}
+          os: ${{ matrix.os }}
 
       # Deploy components.
       - name: Deploy L1 and zkEVM contracts
