chore: change observability enabled to op yml files
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/.github/tests/chains/l1-op1.yml
+++ b/.github/tests/chains/l1-op1.yml
@@ -7,7 +7,7 @@ optimism_package:
         name: "001"
       # additional_services: ["rollup-boost"]
   observability:
-    enabled: false
+    enabled: true
 
 args:
   zkevm_rollup_chain_id: 2151908
