feat: test runner implementation

--- a/.github/tests/additional-services.yml
+++ b/.github/tests/additional-services.yml
@@ -10,4 +10,5 @@ args:
     # - pless_zkevm_node # zkevm-node doesn't support fork12.
     - prometheus_grafana
     - status_checker
+    - test_runner
     - tx_spammer
