--- a/.github/tests/combinations/fork12-cdk-erigon-sovereign.yml
+++ b/.github/tests/combinations/fork12-cdk-erigon-sovereign.yml
@@ -6,6 +6,7 @@ args:
   zkevm_contracts_image: leovct/zkevm-contracts:v9.0.0-rc.5-pp-fork.12
   zkevm_prover_image: hermeznetwork/zkevm-prover:v8.0.0-RC16-fork.12
   additional_services:
+    - test_runner
     - tx_spammer
   consensus_contract_type: pessimistic
   erigon_strict_mode: false
