--- a/.github/tests/combinations/fork13-cdk-erigon-rollup.yml
+++ b/.github/tests/combinations/fork13-cdk-erigon-rollup.yml
@@ -6,6 +6,7 @@ args:
   zkevm_contracts_image: leovct/zkevm-contracts:v8.1.0-rc.2-fork.13
   zkevm_prover_image: hermeznetwork/zkevm-prover:v9.0.0-RC3-fork.13
   additional_services:
+    - test_runner
     - tx_spammer
   consensus_contract_type: rollup
   sequencer_type: erigon
