--- a/.github/tests/combinations/fork9-cdk-erigon-validium.yml
+++ b/.github/tests/combinations/fork9-cdk-erigon-validium.yml
@@ -10,6 +10,7 @@ args:
   cdk_validium_node_image: 0xpolygon/cdk-validium-node:0.7.0-cdk
   additional_services:
     - pless_zkevm_node
+    - test_runner
     - tx_spammer
   consensus_contract_type: cdk-validium
   sequencer_type: erigon
