--- a/.github/tests/forks/fork13.yml
+++ b/.github/tests/forks/fork13.yml
@@ -11,4 +11,5 @@ args:
   zkevm_prover_image: hermeznetwork/zkevm-prover:v9.0.0-RC3-fork.13
 
   additional_services:
+    - test_runner
     - tx_spammer
